[EFL][DRT] http/tests/globalhistory testcases do not pass https://bugs.webkit.org/show_bug.cgi?id=82579

Patch by Mikhail Pozdnyakov <mikhail.pozdnyakov@intel.com> on 2012-06-06
Reviewed by Csaba Osztrogonác.

Tools:

DRT has provided callbacks for ewk_view "global history delegate" signals.

* DumpRenderTree/efl/DumpRenderTree.cpp:
(isGlobalHistoryTest): Aux function to ident global history testcase.
(createLayoutTestController):
* DumpRenderTree/efl/DumpRenderTreeChrome.cpp:
(DumpRenderTreeChrome::createView):
(DumpRenderTreeChrome::onTitleChanged): Handles also some global history testcases.
(DumpRenderTreeChrome::onWebViewNavigatedWithData): New callback function.
(DumpRenderTreeChrome::onWebViewServerRedirect): Ditto.
(DumpRenderTreeChrome::onWebViewClientRedirect): Ditto.
(DumpRenderTreeChrome::onWebViewPopulateVisitedLinks): Ditto.
* DumpRenderTree/efl/DumpRenderTreeChrome.h:
(DumpRenderTreeChrome):

LayoutTests:

* platform/efl/Skipped: Unskip http/tests/globalhistory.

Canonical link: https://commits.webkit.org/106252@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119590 268f45cc-cd09-0410-ab3c-d52691b4dbfc