Tools/DumpRenderTree/efl/DumpRenderTreeChrome.h
@@ -91,6 +91,14 @@ private:
 
     static void onWebViewOnloadEvent(void*, Evas_Object*, void*);
 
+    static void onWebViewNavigatedWithData(void*, Evas_Object*, void*);
+
+    static void onWebViewServerRedirect(void*, Evas_Object*, void*);
+
+    static void onWebViewClientRedirect(void*, Evas_Object*, void*);
+
+    static void onWebViewPopulateVisitedLinks(void*, Evas_Object*, void*);
+
     static void onInsecureContentRun(void*, Evas_Object*, void*);
 
     static void onInsecureContentDisplayed(void*, Evas_Object*, void*);
